--- a/src/main/resources/assets/fire_emblem_renewed/lang/en_us.json
+++ b/src/main/resources/assets/fire_emblem_renewed/lang/en_us.json
@@ -1,8 +1,8 @@
 {
   "item.fire_emblem_renewed.steelpowder": "Steelpowder",
-  "item.fire_emblem_renewed.fire_element": "Fire Element",
-  "item.fire_emblem_renewed.doublecoalpowder": "Doublecoalpowder",
   "item.fire_emblem_renewed.black_knight_armour_boots": "Black Knight Boots",
+  "item.fire_emblem_renewed.doublecoalpowder": "Doublecoalpowder",
+  "item.fire_emblem_renewed.fire_element": "Fire Element",
   "itemGroup.tabadditional_music": "Additional Music",
   "item.fire_emblem_renewed.unstoppable_destiny": "Unstoppable Destiny",
   "item.fire_emblem_renewed.meteor": "Meteor",
@@ -21,6 +21,7 @@
   "itemGroup.tablegendary_weapons": "Legendary Weapons",
   "item.fire_emblem_renewed.black_knight_armour_chestplate": "Black Knight Body",
   "item.fire_emblem_renewed.ragnell_blade": "Ragnell Blade",
+  "item.fire_emblem_renewed.light": "Light",
   "item.fire_emblem_renewed.doublesteelpowder": "Doublesteelpowder",
   "item.fire_emblem_renewed.black_knight_armour_leggings": "Black Knight Leggings",
   "item.fire_emblem_renewed.ragnell": "Ragnell",
