--- a/src/main/resources/assets/fire_emblem_renewed/lang/en_us.json
+++ b/src/main/resources/assets/fire_emblem_renewed/lang/en_us.json
@@ -1,48 +1,51 @@
 {
-  "item.fire_emblem_renewed.steelpowder": "Steelpowder",
-  "item.fire_emblem_renewed.black_knight_armour_boots": "Black Knight Boots",
-  "item.fire_emblem_renewed.doublecoalpowder": "Doublecoalpowder",
   "item.fire_emblem_renewed.fire_element": "Fire Element",
+  "subtitles.galdrrelease": "",
   "itemGroup.tabadditional_music": "Additional Music",
-  "item.fire_emblem_renewed.unstoppable_destiny": "Unstoppable Destiny",
-  "item.fire_emblem_renewed.meteor": "Meteor",
   "item.fire_emblem_renewed.blanktome": "Blanktome",
-  "item.fire_emblem_renewed.black_knight_armour_helmet": "Black Knight Helmet",
   "item.fire_emblem_renewed.fire": "Fire",
-  "item.fire_emblem_renewed.steel_sword": "Steel Sword",
   "item.fire_emblem_renewed.longswordblade": "Longswordblade",
   "itemGroup.tabspecialweaponitems": "Special Weapons and Items",
-  "subtitles.unstoppable_destiny": "The Black Knight is coming for you. Say your final prayers to Ashera.",
   "item.fire_emblem_renewed.javelin": "Javelin",
   "item.fire_emblem_renewed.hammer": "Hammer",
-  "item.fire_emblem_renewed.gold_coin": "Gold Coin",
   "item.fire_emblem_renewed.alondite": "Alondite",
-  "item.fire_emblem_renewed.steel_axe": "Steel Axe",
-  "itemGroup.tablegendary_weapons": "Legendary Weapons",
-  "item.fire_emblem_renewed.black_knight_armour_chestplate": "Black Knight Body",
   "item.fire_emblem_renewed.ragnell_blade": "Ragnell Blade",
-  "item.fire_emblem_renewed.light": "Light",
   "item.fire_emblem_renewed.doublesteelpowder": "Doublesteelpowder",
-  "item.fire_emblem_renewed.black_knight_armour_leggings": "Black Knight Leggings",
   "item.fire_emblem_renewed.ragnell": "Ragnell",
-  "item.fire_emblem_renewed.hilt": "Hilt",
-  "advancements.the_black_knight_lives.descr": "Find the Armour of the Black Knight",
-  "item.fire_emblem_renewed.iron_spear": "Iron Spear",
   "item.fire_emblem_renewed.thunder": "Thunder",
-  "block.fire_emblem_renewed.fire_flower": "Fire Flower",
-  "item.fire_emblem_renewed.steelswordblade": "Steelswordblade",
   "item.fire_emblem_renewed.coalpowder": "Coalpowder",
   "item.fire_emblem_renewed.lightelement": "Lightelement",
   "item.fire_emblem_renewed.doublesteel": "Doublesteel",
   "item.fire_emblem_renewed.thunderelement": "Thunderelement",
-  "item.fire_emblem_renewed.elfire": "Elfire",
-  "item.fire_emblem_renewed.doubleironpowder": "Doubleironpowder",
   "item.fire_emblem_renewed.steel": "Steel",
-  "item.fire_emblem_renewed.windelement": "Windelement",
   "item.fire_emblem_renewed.steelswordcrossguard": "Steelswordcrossguard",
   "item.fire_emblem_renewed.ironpowder": "Ironpowder",
   "advancements.the_black_knight_lives.title": "The Black Knight Lives",
   "itemGroup.tabtomes": "Tomes",
   "item.fire_emblem_renewed.unstoppable_destiny.desc": "The Black Knight is coming for you. Say your final prayers to Ashera.",
+  "item.fire_emblem_renewed.steelpowder": "Steelpowder",
+  "item.fire_emblem_renewed.doublecoalpowder": "Doublecoalpowder",
+  "item.fire_emblem_renewed.black_knight_armour_boots": "Black Knight Boots",
+  "item.fire_emblem_renewed.unstoppable_destiny": "Unstoppable Destiny",
+  "item.fire_emblem_renewed.meteor": "Meteor",
+  "item.fire_emblem_renewed.black_knight_armour_helmet": "Black Knight Helmet",
+  "item.fire_emblem_renewed.steel_sword": "Steel Sword",
+  "subtitles.unstoppable_destiny": "The Black Knight is coming for you. Say your final prayers to Ashera.",
+  "item.fire_emblem_renewed.gold_coin": "Gold Coin",
+  "item.fire_emblem_renewed.the_black_knight_spawn_egg": "The Black Knight Spawn Egg",
+  "item.fire_emblem_renewed.steel_axe": "Steel Axe",
+  "itemGroup.tablegendary_weapons": "Legendary Weapons",
+  "item.fire_emblem_renewed.black_knight_armour_chestplate": "Black Knight Body",
+  "item.fire_emblem_renewed.light": "Light",
+  "item.fire_emblem_renewed.black_knight_armour_leggings": "Black Knight Leggings",
+  "item.fire_emblem_renewed.hilt": "Hilt",
+  "advancements.the_black_knight_lives.descr": "Summon the Black Knight",
+  "item.fire_emblem_renewed.iron_spear": "Iron Spear",
+  "block.fire_emblem_renewed.fire_flower": "Fire Flower",
+  "item.fire_emblem_renewed.steelswordblade": "Steelswordblade",
+  "entity.fire_emblem_renewed.the_black_knight": "The Black Knight",
+  "item.fire_emblem_renewed.elfire": "Elfire",
+  "item.fire_emblem_renewed.doubleironpowder": "Doubleironpowder",
+  "item.fire_emblem_renewed.windelement": "Windelement",
   "block.fire_emblem_renewed.lightningcollector": "Lightningcollector"
 }
